feat: add versioned device configuration
